--- a/SIENI/SIENI-web/src/main/webapp/view/buzonNotificaciones/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/buzonNotificaciones/index.xhtml
@@ -7,14 +7,13 @@
     <ui:define name="breadCrumb">
         <p:breadCrumb>
             <p:menuitem value="Home" url="/"/>
-            <p:menuitem value="Portal de Noticias" url="#"/>
-            <p:menuitem value="Gestión de Noticias" url="#{siteUrls.gestionNoticia}"/>
+            <p:menuitem value="Buzón de notificaciones" url="#{siteUrls.buzonNotificacion}"/>
             <p:separator />
         </p:breadCrumb>
     </ui:define>
     <ui:define name="content">
         <p:tabView>
-            <p:tab title="Noticias Registradas">
+            <p:tab title="Consultar Notificaciones">
                 <h:form>
                     <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
                         <p:outputLabel value="Esta ayuda sirve un monton"/>
@@ -38,16 +37,16 @@
 
                         </p:column>
                         <p:column headerText="Acciones">
-                            <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Noticia"></i>
-                            <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Noticia"></i>
+                            <i class="icon-chat75 Fs25 Red" style="cursor: pointer" title="Ver Consulta"></i>
+                            <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Consulta"></i>
                         </p:column>
                     </p:dataTable>
                     <div class="EmptyBox20"></div>
-                    <p:commandButton value="Crear Nueva Noticia"></p:commandButton>
+                    <p:commandButton value="Crear Nueva Notificación"></p:commandButton>
                     <p:commandButton value="Refrescar"></p:commandButton>
                 </h:form>
             </p:tab>
-            <p:tab title="Registrar Nueva Noticia">
+            <p:tab title="Registrar Notificación">
                 <h:form>
                     <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
                         <p:outputLabel value="Esta ayuda sirve un monton"/>
@@ -59,8 +58,8 @@
                     <div class="EmptyBox20"></div>
                     <p:outputLabel for="estado" value="Estado: " class="Container10 Responsive"></p:outputLabel>
                     <p:selectOneMenu id="estado" class="Container10 Responsive" value="#{archivosMultimediaForm.estado}">
-                        <f:selectItem itemValue ="1" itemLabel="Publicada"/>
-                        <f:selectItem itemValue="0" itemLabel="No Publicada"/>
+                        <f:selectItem itemValue ="1" itemLabel="Disponible"/>
+                        <f:selectItem itemValue="0" itemLabel="No Disponible"/>
                     </p:selectOneMenu>
                     <div class="EmptyBox20"></div>
                     <p:outputLabel for="curso" value="Curso: " class="Container10 Responsive"></p:outputLabel>
@@ -70,8 +69,19 @@
                         <f:selectItem itemValue ="2" itemLabel="Imagen"/>
                     </p:selectOneMenu>
                     <div class="EmptyBox20"></div>
-                    <p:outputLabel for="consulta" value="Noticia: " class="Container10 Responsive"></p:outputLabel>
+                    <p:outputLabel for="consulta" value="Consulta: " class="Container10 Responsive"></p:outputLabel>
                     <p:editor id="consulta"></p:editor>
+                    <div class="EmptyBox10"></div>
+                    <p:outputLabel value="Tipo de Archivo:"></p:outputLabel>
+                    <p:selectOneMenu>
+                        <f:selectItem itemValue="-1" itemLabel="No adjuntar"></f:selectItem>
+                        <f:selectItem itemValue="0" itemLabel="Audio"></f:selectItem>
+                        <f:selectItem itemValue="1" itemLabel="Video"></f:selectItem>
+                        <f:selectItem itemValue="2" itemLabel="Imagen"></f:selectItem>
+                    </p:selectOneMenu>
+                    <div class="EmptyBox10"></div>
+                    <p:fileUpload label="Buscar" cancelLabel="cancelar" uploadLabel="Subir archivo" multiple="false" mode="advanced" skinSimple="true" allowTypes="/(\.|\/)(jpg)$/" class="Container40 Responsive" value="#{archivosMultimediaForm.archivo}" >
+                    </p:fileUpload>
                     <div class="EmptyBox20"></div>
                     <p:commandButton value="Guardar"/>
                     <p:commandButton value="Limpiar"/>
@@ -87,12 +97,19 @@
                     </p:splitButton>
                 </h:form>
             </p:tab>
-            <p:tab title="Ver Noticias">
-                <p:dataScroller value="#{clasesForm.plantillas}" var="noticia" >
-                    <p:panel  header="Clases suspendidas por paro de buses" closable="true">
-                        <p:outputLabel value="Las actividades escolares quedan suspendidas hasta nuevo aviso"></p:outputLabel>
-                    </p:panel>
-                </p:dataScroller>
+            <p:tab title="Ver Notificaciones">
+                <h:form>
+                    <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
+                        <p:outputLabel value="Esta ayuda sirve un monton"/>
+                    </p:dialog>
+                    <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
+                    <div class="EmptyBox20"></div>
+                    <p:dataScroller value="#{clasesForm.plantillas}" var="noticia" chunkSize="5">
+                        <p:panel  header="Evaluación de matemáticas, reprogramada" closable="true">
+                            <p:outputLabel value="La evaluación de Matemáticas será reprogramada despues de las fiestas agostinas"></p:outputLabel>
+                        </p:panel>
+                    </p:dataScroller>
+                </h:form>
             </p:tab>
         </p:tabView>
     </ui:define>
